@@ -1283,6 +1283,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\xrc\xh_toolbk.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\xrc\xh_tree.h"
 				>
 			</File>
@@ -1526,6 +1530,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\xrc\xh_toolb.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\xrc\xh_toolbk.cpp"
 				>
 			</File>
 			<File
