@@ -1279,6 +1279,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\xrc\xh_toolbk.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\xrc\xh_tree.h"
 				>
 			</File>
@@ -1522,6 +1526,10 @@
 			</File>
 			<File
 				RelativePath="..\..\src\xrc\xh_toolb.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\xrc\xh_toolbk.cpp"
 				>
 			</File>
 			<File
