@@ -423,6 +423,7 @@ All (GUI):
 - Fix display of right aligned columns in wxGenericListCtrl (jl).
 - Restore text drag-and-drop in wxSTC broken by Scintilla 2 update (Jens Lody).
 - Improve wxGTK print/page setup dialog (rafravago).
+- Added wxToolbook XRC handler (Andrea Zanellato).
 
 MSW:
 
